# Copyright (c) 2004-2007. The SimGrid team. All right reserved.

# This file is part of the SimGrid project. This is free software:
# You can redistribute and/or modify it under the terms of the
# GNU LGPL (v2.1) licence.

SUBDIRS=gras tesh 
#tesh2
include $(top_srcdir)/acmacro/dist-files.mk
if GRAMINE_MODE
else
EXTRA_DIST= simgrid_update_xml.pl graspe-master sg_unit_extractor.pl
endif
